--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute; 
   /* reference parent element(must be relative) */
   /* top: 40px;
@@ -56,12 +56,12 @@ body {
   left: 4rem;
 }
 
-.logo{
+.header__logo{
   /* height: 35px; */
   height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -79,7 +79,7 @@ body {
   margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   /* font-size: 60px; */
   font-size: 6rem;
@@ -97,7 +97,7 @@ body {
   
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   /* font-size: 20px; */
   font-size: 2rem;
@@ -194,7 +194,7 @@ body {
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -213,7 +213,7 @@ body {
   transition: all .4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -222,7 +222,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards;
 }
